force-app/main/default/objects/Log_Buffer__c/Log_Buffer__c.object-meta.xml
<CustomObject>
    <label>Log Buffer</label>
    <nameField>
        <label>Log Buffer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Buffers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>