force-app/main/default/objects/Log_Buffer__c/fields/Buffer_Data__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Data__c</fullName>
    <description>Serialized log entries</description>
    <label>Buffer Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>