force-app/main/default/objects/Log_Buffer__c/fields/Buffer_Status__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Status__c</fullName>
    <label>Buffer Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>