force-app/main/default/objects/Log_Buffer__c/fields/Entry_Count__c.field-meta.xml
<CustomField>
    <fullName>Entry_Count__c</fullName>
    <description>Number of entries in buffer</description>
    <label>Entry Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>