force-app/main/default/objects/Log_Buffer__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error details if processing failed</description>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>