force-app/main/default/objects/Log_Buffer__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Associated transaction ID</description>
    <label>Transaction ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>